--- a/src/Components/ArticleDetail/ArticleDetail.css
+++ b/src/Components/ArticleDetail/ArticleDetail.css
@@ -8,7 +8,7 @@
 }
 
 .article-details h2 {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: clamp(1.2rem, 4vw, 1.5rem);
   margin-bottom: 1rem;
   text-align: center;
@@ -26,6 +26,8 @@
   font-size: clamp(0.9rem, 2vw, 1rem);
   margin-bottom: 1rem;
   text-align: justify;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  max-width: 60%;
 }
 
 .article-details button {
