--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
+  background-color: #FFF8F1;
+}
+
+.error-msg {
+  color: #ff0033; 
+  background-color: #f8d7da; 
+  border-color: #f5c6cb; 
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 4px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  font-weight: bold; 
+  font-size: 1.2rem;
+  text-align: center; 
 }
