--- a/src/Components/ArticleList/ArticleList.css
+++ b/src/Components/ArticleList/ArticleList.css
@@ -7,12 +7,13 @@
 .article-list {
   display: grid;
   justify-content: center;
-  align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(clamp(30%, 300px, 1fr), 1fr));
-  grid-gap: 1%;
-  padding: 1%;
-  max-width: 70%;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  align-items: start;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: min-content;
+  grid-gap: clamp(1rem, 3vw, 7rem);
+  padding: clamp(0.6rem, 2vw, 1rem);
+  max-width: 80%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .article-list a {
