--- a/src/Components/Preview/Preview.css
+++ b/src/Components/Preview/Preview.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   border: 1px solid #ddd;
-  border-radius: clamp(0.8%, 8px, 2%);
-  padding: clamp(0.8%, 15px, 2%);
+  border-radius: clamp(0.5rem, 2vw, 1rem);
+  padding: clamp(.5rem, 2vw, 1rem);
   transition: all 0.3s ease;
+  width: 100%; 
+  height: 38rem;
+  overflow: auto;
+  box-sizing: border-box;
+  background-color: #FFFFFF;
 }
 
 .preview-container h2 {
@@ -15,6 +20,7 @@
   max-width: 100%;
   object-fit: cover;
   margin-bottom: clamp(0.8%, 12px, 1.5%);
+  filter: sepia(0.4) saturate(1.2) hue-rotate(10deg);
 }
 
 .preview-container p {
@@ -23,5 +29,8 @@
 
 .preview-container:hover {
   transform: scale(1.02);
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px 2px rgba(126, 205, 216, 0.7),
+              0px 0px 20px 4px rgba(126, 205, 216, 0.5),
+              0px 0px 30px 6px rgba(126, 205, 216, 0.3),
+              0px 0px 40px 8px rgba(126, 205, 216, 0.1);
 }
