--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,7 +1,18 @@
 .search-bar {
   display: flex;
   justify-content: center;
-  margin-top: 6%;
+  margin-top: 2%;
+}
+
+.search-bar form {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: .5rem;
+  width: 100%;
+  max-width: 15rem;
 }
 
 .search-bar input {
@@ -18,7 +29,7 @@
   background-color: #000;
   color: #fff;
   border: none;
-  border-radius: 0 5px 5px 0;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
